<resources>
    <string name="app_name">Pharma-collect-pro</string>
    <string name="title_home">Home</string>
    <string name="title_prescription">Prescription</string>
    <string name="title_pharmacy">Pharmacy</string>
    <string name="title_history">Documents</string>
    <string name="title_locker">Lockers</string>
    <string name="title_shop">Stats</string>
    <string name="title_to_do">To Do</string>
    <string name="title_in_progress">In Progress</string>
    <string name="title_done">Done</string>
    <string name="title_update">Update my pharmacy</string>
    <string name="splash_logo">Splash my Pharma logo</string>
    <string name="one_of_six">1/6</string>
    <string name="two_of_six">2/6</string>
    <string name="three_of_six">3/6</string>
    <string name="four_of_six">4/6</string>
    <string name="five_of_six">5/6</string>
    <string name="six_of_six">6/6</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome on Pharma-collect !</string>
    <string name="description">Pharma collect will be your best professionnal pharmacy assistant. It will make your life easier and will upgrade your result.</string>
    <string name="see">We will see how it is working on the next page</string>
    <string name="slide">Slide to go to the next page or click on the next button at the bottom right of the page</string>
    <string name="your_pharmacy">Your pharmacy</string>
    <string name="not_allowed">The application is only a support for orders and management. All actions about creation of a pharmacy, management of users and shop management must be done with the Base Object given with the application.</string>
    <string name="not_allowed_next">Every action are management by the pharmacy boss. Any action except order management are allowed for basic users</string>
    <string name="order_info">Order items allows you to see all waiting, in process or done orders. Preparator, id, pharmacy, client or locker are mentionned. A very useful part to manage orders of the pharmacy</string>
    <string name="shop_infos"> This part allows you to get stats about the infulence on the app with graph</string>
    <string name="locker_info">Locker item allows to see which locker is empty and available or not. You can manage it by adding or deleting and get their status.</string>
    <string name="pharma_infos">Allow you to get all main information about the pharmacy you are working in.</string>
    <string name="items">Pharma-collect items</string>
    <string name="pharmas">Pharma</string>
    <string name="navbar">The bottom navbar</string>
    <string name="navbar_description">The navbar allows you to access quickly to the different spaces of the application described on the previous page. It is a quick and intuitive navigation.</string>
    <string name="navbar_image">Navbar image</string>
    <string name="home_menu">The home page</string>
    <string name="home_page">The home page allows you to get all important informations centralized in one page. It is the heart of the application and fetch user information, orders information or locker information</string>
    <string name="home_image">Image description home disposition</string>
    <string name="enjoy">Thanks for using PharmaCollect, ENJOY !</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="header_image">Pharma collect header blue</string>
    <string name="pharma_name">Pharmacy name</string>
    <string name="current_user">Current user</string>
    <string name="in_charge">In charge</string>
    <string name="in_charge_order">No order in progress</string>
    <string name="menu">Menu</string>
    <string name="prescription">Prescription</string>
    <string name="amount_waiting">To do : </string>
    <string name="shop">Shop</string>
    <string name="locker">Locker</string>
    <string name="amount_available">Available : </string>
    <string name="client">Client</string>
    <string name="history">History</string>
    <string name="pharma">My Pharmacy</string>
    <string name="logout">Logout</string>
    <string name="current">Current order</string>
    <string name="pharma_info">Pharmacy profile</string>
    <string name="id_user">ID : </string>
    <string name="pharma_logo">Pharmacy logo</string>
    <string name="prescription_logo">Prescription logo</string>
    <string name="shop_logo">Shop logo</string>
    <string name="locker_logo">Locker logo</string>
    <string name="client_logo">Client logo</string>
    <string name="logout_logo">Logout logo</string>
    <string name="user_logo">User logo</string>
    <string name="settings_logo">Settings logo</string>
    <string name="pharma_name_profile">Pharmacy name</string>
    <string name="id_pharma_profile">ID : </string>
    <string name="number_user_label">Users</string>
    <string name="number_admin_label">Admin</string>
    <string name="has_shop_label">Shop ?</string>
    <string name="phone_profile">Phone :</string>
    <string name="address_profile">Address :</string>
    <string name="postcode_profile">Postcode</string>
    <string name="city_profile">City</string>
    <string name="road_profile">Road</string>
    <string name="road_nb_profile">Road number</string>
    <string name="pharma_logo_profile">Logo of the pharmacy</string>
    <string name="current_user_pres">Current user</string>
    <string name="id_user_pres">ID : </string>
    <string name="in_charge_pres">No order in charge</string>
    <string name="to_do_pres">To do</string>
    <string name="amount">Amount : </string>
    <string name="in_progress_pres">In progress</string>
    <string name="done_pres">Done</string>
    <string name="order">Orders</string>
    <string name="stats">Get stats</string>
    <string name="all">All orders</string>
    <string name="ready">Ready</string>
    <string name="container">Container</string>
    <string name="finished">Finish</string>
    <string name="prescription_and">Prescriptions &amp;</string>
    <string name="user_logo_pres">Logo user</string>
    <string name="prescription_logo_pres">Prescription logo</string>
    <string name="in_progress_logo_pres">In progress logo</string>
    <string name="done_logo_pres">Done logo</string>
    <string name="order_stat">Orders state of progress</string>
    <string name="filter">Filter</string>
    <string name="user_stat">App users graph</string>
    <string name="user_pro_stat">Pro user graph</string>
    <string name="locker_stat">Locker state</string>
    <string name="product_graph">All products</string>
    <string name="product_graph_amount">Amount of products</string>
    <string name="des_order">Amout of order by state</string>
    <string name="des_user_pro">Amout of professional user by state</string>
    <string name="visualize">Visualize your data on a simple way</string>
    <string name="select">Select a graph</string>
    <string name="all_state">All orders state</string>
    <string name="type">Type</string>
    <string name="amount_locker">All locker by state</string>
    <string name="stats_and">Stats &amp;</string>
    <string name="graphs">Graphs</string>
    <string name="list_pres">List of pending prescriptions</string>
    <string name="list_order">List of pending orders IDs</string>
    <string name="list_product">List of products :</string>
    <string name="detail">Order detail :</string>
    <string name="total_price">Total price :</string>
    <string name="ras">RAS</string>
    <string name="order_state">State :</string>
    <string name="treat">Treat this one</string>
    <string name="update_ready">Set ready</string>
    <string name="info">Client sheet</string>
    <string name="firstname">Client firstname :</string>
    <string name="lastname">Client lastname :</string>
    <string name="dob">Date of birth :</string>
    <string name="phone">Client phone :</string>
    <string name="mail">Client mail :</string>
    <string name="age">Client age :</string>
    <string name="profile_picture">Profile picture of client</string>
    <string name="picture_pres">Click on the picture to see the prescription</string>
    <string name="is_ready">Set this order to ready ?</string>
    <string name="conditions">Conditions :</string>
    <string name="condi_one">1) All products should be there</string>
    <string name="cond_two">2) All products should be verified in function of the client and its client sheet</string>
    <string name="cond_three">3) A note should be written if necessary</string>
    <string name="note">Write note …</string>
    <string name="my_pro">My profile</string>
    <string name="locker_mana">Management</string>
    <string name="all_container">All containers of my pharmacy</string>
    <string name="add">Add</string>
    <string name="clear_all">Clear all</string>
    <string name="locker_nmbr">Locker number : </string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="current_state">Current locker state : </string>
    <string name="state_select">Select the new state :</string>
    <string name="add_locker">Add lockers</string>
    <string name="amount_select">Select the amount of locker to add</string>
    <string name="cancel">Cancel</string>
    <string name="container_id">ID</string>
    <string name="default_value">None</string>
    <string name="delete">Delete</string>
    <string name="pending">Pending</string>
    <string name="list_assignee">List of order ID assigned to this user :</string>
    <string name="id_client">Client ID :</string>
    <string name="add_to_box">Select locker</string>
    <string name="selection">Selection</string>
    <string name="select_txt">Select the locker where you want to put the order</string>
    <string name="my_shop">My shop</string>
    <string name="products">Products</string>
    <string name="search_name">Search by name</string>
    <string name="amount_of_products">Amount of products</string>
    <string name="didac_update">Overwrite the things you want to update :</string>
    <string name="pharmacy_name">Pharmacy name :</string>
    <string name="pharmacy_road_nb">Road number :</string>
    <string name="pharmacy_road_name">Road name :</string>
    <string name="pharmacy_phone">Phone number :</string>
    <string name="pharmacy_postcode">Postcode :</string>
    <string name="pharmacy_city">City :</string>
    <string name="sure">Select this box ?</string>
    <string name="id_container">Container ID : </string>
    <string name="nb_container">Container number : </string>
    <string name="confirm">Valid</string>
    <string name="avoid">Cancel</string>
    <string name="preparator_id">Preparator id :</string>
    <string name="locker_nb">Locker number : </string>
    <string name="select_product">Select products</string>
    <string name="shop_product">Shop products</string>
    <string name="confirm_set_ready">Confirm and set ready ?</string>
    <string name="select_amount">Select the amount of products</string>
    <string name="product_name">Product name</string>
    <string name="amount_selected">Selected : 0</string>
    <string name="product_attribute">Attribute</string>
    <string name="processing">Processing…</string>
    <string name="delete_all">Delete ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>