<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_locker"
        android:icon="@drawable/locker_logo"
        android:title="@string/title_locker" />

    <item
        android:id="@+id/navigation_prescription"
        android:icon="@drawable/prescription_logo"
        android:title="@string/title_prescription" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history_logo"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_pharmacy"
        android:icon="@drawable/pharmacy_logo"
        android:title="@string/title_pharmacy" />

</menu>