<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>
        <variable
            name="statsviewmodel"
            type="fr.isen.emelian.pharma_collect_pro.ui.stats.StatsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="65dp"
        android:padding="10dp">

        <Button
            android:id="@+id/button_barchart_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_stat"
            android:textColor="@color/white"/>
        
        <Button
            android:id="@+id/button_pie_user_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_pro_stat"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_pie_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_stat"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_pie_locker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locker_stat"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_timeline_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_graph"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_barchart_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_graph_amount"
            android:textColor="@color/white"/>

    </LinearLayout>

</layout>