<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_eight"
    android:padding="30dp">

    <TextView
        android:id="@+id/sure_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_ready"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/conditions"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/condition_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/condi_one"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/condition_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cond_two"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/condition_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cond_three"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/not_ed"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="20dp"
            android:background="@drawable/shape_four"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/note"
            android:gravity="center"
            android:textColor="#6E6E6E"
            android:textColorHint="#6E6E6E"
            android:autofillHints="@string/note"
            android:inputType="text"
            android:textSize="12sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_six"
            android:text="@string/confirm"
            android:textColor="#fff"
            app:icon="@drawable/ic_baseline_check_circle_24"
            app:iconTint="#4CAF50" />


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_five"
            android:text="@string/avoid"
            android:textColor="#fff"
            app:icon="@android:drawable/ic_menu_close_clear_cancel"
            app:iconTint="#DA1717"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>


</LinearLayout>