<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.prescription.detail.DetailPrescriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="65dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/back"
                android:textColor="#6E6E6E"
                android:textSize="15sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_baseline_arrow_back_ios_24"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/button_treat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/treat"
                android:textColor="#6E6E6E"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <TextView
            android:id="@+id/id_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_pharma_profile"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_client"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_pharma_profile"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_centerInParent="true"/>

                <Button
                    android:id="@+id/button_client_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:background="@android:color/transparent"
                    android:text="@string/info"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />


            </RelativeLayout>



            <TextView
                android:id="@+id/status_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_state"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/list_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/picture_pres"
                android:textStyle="bold"
                android:textSize="20sp"/>


            <ImageView
                android:id="@+id/product_list"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginTop="15dp"
                android:padding="20dp"
                android:layout_gravity="center"
                android:src="@drawable/prescription_logo"
                android:contentDescription="@string/prescription_logo"/>

            <TextView
                android:id="@+id/detail_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/detail"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ras"
                android:textStyle="bold"
                android:textSize="15sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#FF0000"/>

    </LinearLayout>

</FrameLayout>