<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.prescription.detail.DetailClientFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

    <Button
        android:id="@+id/button_back_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="#6E6E6E"
        android:textSize="15sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_margin="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/shape_four">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/cercle_background_blue_clear">

                <ImageView
                    android:id="@+id/client_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ic_baseline_person_24"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/profile_picture"/>

                <TextView
                    android:id="@+id/client_username"
                    android:layout_width="100dp"
                    android:maxWidth="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/username"
                    android:layout_marginBottom="40dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/client_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_pharma_profile"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/client_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/client_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/client_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/client_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/client_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/client_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>

    </LinearLayout>

</FrameLayout>