<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_eight"
    android:padding="30dp">

    <TextView
        android:id="@+id/sure_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#fff"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/shape_six"
            android:text="@string/confirm"
            android:textColor="#fff" />


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_five"
            android:text="@string/avoid"
            android:textColor="#fff"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>